# master_thesis

./: .gitignore  Crash investigation.ipynb  Dockerfile  Flights.ipynb  Landing.ipynb  Lattice test.ipynb  Motion primitives.ipynb  Wind.ipynb  docker-compose.yml  includepath.json  plot.py  test.eps
docker/: Dockerfile-route
lib/: control.py  parse.py  plot.py  simulation.py
old_flights/: results-20190813-153328.json
parameters/: 2019_08_20_parrot.params  overwrite.parm
report/: avrundning.aux  detaljer.aux  engelsk-sammanfattning.tex  framläggning.tex  half_time_report.aux  half_time_report.dvi  half_time_report.fdb_latexmk  half_time_report.fls  half_time_report.nav  half_time_report.out  half_time_report.snm  half_time_report.tex  half_time_report.toc  introduktion.aux  liclist-utf8.tex  liclist.tex  main.aux  main.bbl  main.blg  main.dvi  main.fdb_latexmk  main.fls  main.idx  main.ilg  main.ind  main.out  main.tex  main.toc  mynotation.sty  myrefs.bib  mythesis.sty  notation.aux  notation.tex  phdlist-utf8.tex  phdlist.tex  resultat.aux  resultat.tex  rtlic-defs-utf8.sty  rtlic-defs.sty  rtphd-defs-utf8.sty  (+8 more)
report/theory/: __latexindent_temp.tex  discussion.aux  discussion.tex  experiments.aux  figure.fdb_latexmk  figure.fls  fixed_wing_old.tex  fixed_wing_uav.aux  fixed_wing_uav.tex  implementation.aux  implementation.tex  introduction.aux  introduction.tex  motion_planning.aux  motion_planning.tex  optimal_landing.aux  optimal_landing.tex  planning_wind.aux  planning_wind.tex  results.aux  results.tex  uav_dynamics.aux  uav_dynamics.tex  wind.aux  wind.tex  wind_estimate.aux  wind_estimate.tex
route/: CMakeLists.txt  Makefile  a.out  astar.cpp  astar.h  config.env  constants.h  gen_hlut.cpp  geo_utils.h  graph.cpp  graph.h  grid_search.txt  hlut.cpp  hlut.h  hlut_viz.txt  improve_viz.cpp  land_opt.txt  landing.cpp  landing.h  log_opt.txt  main.cpp  mission.cpp  motion_primitive.cpp  motion_primitive.h  mp.cpp  obstacle.cpp  obstacle.h  obstacles.txt  opt.cpp  opt.h  opt_test.cpp  opt_test_traj.txt  primitives.txt  sim.cpp  sim.txt  sim_astar.txt  sim_att.csv  sim_filtered.txt  sim_roll.txt  sim_roll_neg.txt  (+14 more)
route/cmake/: mason.cmake
route/geodata/: land_ss_buffer.geojson  obstacles.geojson  single.geojson
route/mason_packages/headers/boost/1.67.0/: mason.ini
route/mason_packages/headers/geojson/0.4.3/: mason.ini
route/mason_packages/headers/geometry/1.0.0/: mason.ini
route/plot_data/: sol.txt  sol_traj.txt  sol_unfiltered.txt  sol_unfiltered_traj.txt
route/plot_data/real_eval/: landing.geojson  landing.txt  log.csv  logs.txt
route/plot_data/roll/: att.csv  log.csv  obstacles.txt  sim.txt  sim_att.csv  sol.txt
route/plot_data/roll_270/: log.csv  sim.txt  sol.txt
route/plot_data/roll_no_wind/: log.csv  sim.txt  sol.txt
route/plot_data/sim_eval/dir_0/: log.csv  params.txt  sol.txt  stat.csv
route/plot_data/sim_eval/dir_180/: landing.txt  log.csv  params.txt  sol.txt  stat.csv
route/plot_data/sim_eval/dir_270/: log.csv  params.txt  sol.txt  stat.csv
route/plot_data/sim_eval/dir_90/: log.csv  params.txt  sol.txt  stat.csv
route/primitives/: 0.txt  5.txt  6.txt  7.txt  8.txt  visual.txt  visual_high.txt  visual_low.txt
wind_data/: 20190813T110000Z_gust.json  20190813T110000Z_wd.json  20190813T110000Z_ws.json  20190813T140000Z_gust.json  20190813T140000Z_wd.json  20190813T140000Z_ws.json  20190814T130000Z_gust.json  20190814T130000Z_wd.json  20190814T130000Z_ws.json  20190814T140000Z_gust.json  20190814T140000Z_wd.json  20190814T140000Z_ws.json  20190814T160000Z_gust.json  20190814T160000Z_wd.json  20190814T160000Z_ws.json  20190815T110000Z_gust.json  20190815T110000Z_wd.json  20190815T110000Z_ws.json  20190820T100000Z_gust.json  20190820T100000Z_wd.json  20190820T100000Z_ws.json  20190822T100000Z_gust.json  20190822T100000Z_wd.json  20190822T100000Z_ws.json
